<resources>
    <string name="app_name">Car State Survey</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_secondary">To start this survey, click the button below.</string>
    <string name="start_survey">Start survey</string>
    <string name="general_infos">General infos</string>
    <string name="brand">Brand</string>
    <string name="type">Type</string>
    <string name="vintage">Vintage</string>
    <string name="licence_plate_number">Licence plate number</string>
    <string name="vin">VIN</string>
    <string name="comefrom">Came from...</string>
    <string name="kilometers">Kilometers</string>
    <string name="bodytype">Body type</string>
    <string name="numberofkeys">Number of keys</string>
    <string name="receptiondate">Reception date</string>
    <string name="next">Next</string>
    <string name="polish">Polish</string>
    <string name="isthecarrusty">Is the car rusty?</string>
    <string name="windscreen">Windscreen</string>
    <string name="lamps">Lamps</string>
    <string name="headlightwashers">Headlight washers</string>
    <string name="windwcreenwiper">Windscreen wiper</string>
    <string name="antenna">Antenna</string>
    <string name="tirebrand">Tire brand</string>
    <string name="sparetirebrand">Spare tire brand</string>
    <string name="boltsandwheelguard">Bolts and wheel guard</string>
    <string name="sparewheel">Spare wheel</string>
    <string name="carjack">Car jack</string>
    <string name="tirecondition">Tire condition</string>
    <string name="bonnet">Bonnet</string>
    <string name="rightfrontarc">Right front arc</string>
    <string name="rightfrontdoor">Right front door</string>
    <string name="rightreardoor">Right rear door</string>
    <string name="rightreararc">Right rear arc</string>
    <string name="tailgate">Tailgate</string>
    <string name="leftreararc">Left rear arc</string>
    <string name="leftreardoor">Left rear door</string>
    <string name="leftfrontdoor">Left front door</string>
    <string name="leftfrontarc">Left front arc</string>
    <string name="top">Top</string>
    <string name="title_activity_engine_room">EngineRoom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="engine_room_cleanness">Engine room cleanness</string>
    <string name="cabin_smell">Cabin smell</string>
    <string name="oil_consistency">Oil consistency</string>
    <string name="cooling_water">Cooling water</string>
    <string name="water_leaking">Water leaking</string>
    <string name="antifreeze_degree">Antifreeze degree</string>
    <string name="engineroom_cover">Engineroom cover</string>
    <string name="need_leather_paint">Is leather paint needed?</string>
    <string name="trims_and_leather">Trims and leather</string>
    <string name="carpets">Carpets</string>
    <string name="changeover_button">Changeover button</string>
    <string name="control_status">Control status</string>
    <string name="interior_rear_view">Interior rear view</string>
    <string name="headrests">Headrests</string>
    <string name="trunkmat">Trunk mat</string>
    <string name="hatrack">Hat-rack</string>
    <string name="handrails">Hand rails</string>
    <string name="steeringstate">Steering state</string>
    <string name="picture_of_the_engineroom">Picture of the engineroom</string>
    <string name="remote_controls_locks">Remote controls / locks</string>
    <string name="audio_system">Audio system</string>
    <string name="what_is_the_code">What is the code?</string>
    <string name="clock_group">Clock group</string>
    <string name="horn">Horn</string>
    <string name="electric_windows">Electric windows</string>
    <string name="electic_mirror_adjustment">Electric mirror adjustment</string>
    <string name="swing_switches_multiswitches">Swing switches / multiswitches</string>
    <string name="navigation_system">Navigation system</string>
    <string name="sunroof">Sunroof</string>
    <string name="seat_adjustment">Seat adjustment</string>
    <string name="dtcs_on_ignition">DTCs on ignition</string>
    <string name="does_it_start">Does it start?</string>
    <string name="is_the_accumulator_ok">Is the accumulator ok?</string>
    <string name="is_the_engine_flawless">Is the engine flawless?</string>
    <string name="what_is_the_problem">What is the problem?</string>
    <string name="fuel">Fuel</string>
    <string name="fuel_level">Fuel level</string>
    <string name="changer_type">Changer type</string>
    <string name="does_the_air_blow_work">Does the air blow work?</string>
    <string name="does_the_compressor_turn_on">Does the compressor turn on?</string>
    <string name="errors_in_extensions_during_drive">Errors in extensions during drive</string>
    <string name="engine_sound">Engine sound</string>
    <string name="does_it_smoke_when_accelerating">Does it smoke when accelerating?</string>
    <string name="shift_gate">Shift gate</string>
    <string name="clutch">Clutch</string>
    <string name="flywheel">Flywheel</string>
    <string name="automation_changer_operation">Automation changer operation</string>
    <string name="power_steering">Power steering</string>
    <string name="hand_brake">Hand brake</string>
    <string name="suspension_condition">Suspension condition</string>
    <string name="landing_gear_failure_reason">Landing gear failure reason</string>
    <string name="brake_condition">Brake condition</string>
    <string name="brake_error_source">Brake error source</string>
    <string name="parking_radio_camera">Parking radio camera</string>
    <string name="heating">Heating</string>
    <string name="sidelights">Sidelights</string>
    <string name="dippedlights">Dipped lights</string>
    <string name="headlight">Headlight</string>
    <string name="brakelight">Brake light</string>
    <string name="reversing">Reversing</string>
    <string name="turnsignal">Turn signal</string>
    <string name="foglights">Fog lights</string>
    <string name="nextstate">Next state</string>
    <string name="upload">Upload</string>
    <string name="deletesurvey">Delete survey</string>
</resources>
