<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PaintThickness">

    <ImageView
        android:scaleType="fitXY"
        android:id="@+id/imageView3"
        android:layout_width="960dp"
        android:layout_height="540dp"
        card_view:srcCompat="@drawable/download" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/bonnet"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/bonnet" />

                    <TextView
                        android:id="@+id/bonnetseekbarvalue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1" />
                </LinearLayout>

                    <SeekBar
                        android:id="@+id/bonnetseekbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="10" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/rightfrontarc"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/rightfrontarc" />

                        <TextView
                            android:id="@+id/rightfrontarcseekbarvalue"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1" />
                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/rightfrontarcseekbar"
                        android:max="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/rightfrontdoor"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/rightfrontdoor" />

                        <TextView
                            android:id="@+id/rightfrontdoorseekbarvalue"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1" />
                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/rightfrontdoorseekbar"
                        android:max="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/rightreardoor"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/rightreardoor" />

                        <TextView
                            android:id="@+id/rightreardoorseekbarvalue"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1" />
                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/rightreardoorseekbar"
                        android:max="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/rightreararc"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/rightreararc" />

                        <TextView
                            android:id="@+id/rightreararcseebarvalue"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1" />
                    </LinearLayout>


                    <SeekBar
                        android:id="@+id/rightreararcseekbar"
                        android:max="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tailgate"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/tailgate" />

                        <TextView
                            android:id="@+id/tailgateseekbarvalue"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1" />
                    </LinearLayout>


                    <SeekBar
                        android:id="@+id/tailgateseekbar"
                        android:max="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/leftreararc"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/leftreararc" />

                        <TextView
                            android:id="@+id/leftreararcseekbarvalue"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1" />
                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/leftreararcseekbar"
                        android:max="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/leftreardoor"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/leftreardoor" />

                        <TextView
                            android:id="@+id/leftreardoorseekbarvalue"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1" />
                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/leftreardoorseekbar"
                        android:max="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/leftfrontdoor"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/leftfrontdoor" />

                        <TextView
                            android:id="@+id/leftfrontdoorseekbarvalue"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1" />
                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/leftfrontdoorseekbar"
                        android:max="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/top"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/top" />

                        <TextView
                            android:id="@+id/topseekbarvalue"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1" />
                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/topseekbar"
                        android:max="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</FrameLayout>